[project]
name = "comfyui-animateanyone-evolved"
description = "Improved AnimateAnyone implementation that allows you to use the opse image sequence and reference image to generate stylized video.\nThe current goal of this project is to achieve desired pose2video result with 1+FPS on GPUs that are equal to or better than RTX 3080!🚀\n[w/The torch environment may be compromised due to version issues as some torch-related packages are being reinstalled.]"
version = "1.0.0"
license = "LICENSE"
dependencies = ["accelerate", "clip @ https://github.com/openai/CLIP/archive/d50d76daa670286dd6cacf3bcd80b5e4823fc8e1.zip#sha256=b5842c25da441d6c581b53a5c60e0c2127ebafe0f746f8e15561a006c6c3be6a", "diffusers>=0.26.1", "einops", "gradio", "gradio_client", "imageio", "imageio-ffmpeg", "numpy", "omegaconf", "open-clip-torch", "opencv-contrib-python", "opencv-python", "Pillow", "scikit-image", "scikit-learn", "scipy", "torchdiffeq", "torchmetrics", "torchsde", "transformers", "xformers"]

[project.urls]
Repository = "https://github.com/MrForExample/ComfyUI-AnimateAnyone-Evolved"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-AnimateAnyone-Evolved"
Icon = ""
